--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "fcc-learn-npm-package-json",
 	"dependencies": {
 		"express": "^4.14.0",
-		"@freecodecamp/example": "~1.2.13"
+		"@freecodecamp/example": "^1.2.13"
 	},
 	"keywords": ["freecodecamp", "npm", "node.js", "api"],
 	"license": "freecodecamp MIT",
