--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
 	"name": "fcc-learn-npm-package-json",
 	"dependencies": {
-		"express": "^4.14.0",
-		"@freecodecamp/example": "^1.2.13"
+		"express": "^4.14.0"
 	},
 	"keywords": ["freecodecamp", "npm", "node.js", "api"],
 	"license": "freecodecamp MIT",
